# smart-notebook

./: Makefile  README.md  docker-compose.yml  pyproject.toml
src/: dependencies.py  main.py  state.py  utils.py
src/core/: config.py  security.py
src/routes/: auth.py  notes.py
src/services/: users.py
ui/: api.py  app.py  query_params.py  session.py
ui/views/: discovery.py  login.py  notes.py  register.py
