[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "asyncpg>=0.30.0",
    "neo4j>=6.2.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
    "streamlit>=1.35.0",
    "google-generativeai>=0.8.6",
    "markdown>=3.0",
]
